fix: hide overflow cropped area

--- a/src/features/profile-setting/ui/profilePostModal/ImageCropper.module.scss
+++ b/src/features/profile-setting/ui/profilePostModal/ImageCropper.module.scss
@@ -42,21 +42,6 @@
   }
 }
 
-.cropper {
-  background-color: transparent !important;
-  outline: none !important;
-  box-shadow: none !important;
-}
-
 .cropArea {
-  box-shadow: none !important;
-  border: none !important;
-}
-
-.cropperContainer {
-  overflow: hidden;
-}
-
-.buttonContainer {
-  //position: relative;
+  color: #313131 !important;
 }
